--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -1,5 +1,4 @@
-@import '../App.scss';
-
+@import "../App.scss";
 
 .FooterContainer {
   padding: 38px 80px 28px 80px;
@@ -9,7 +8,6 @@
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 16px;
     place-items: center;
-
   }
 }
 
