--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   padding: 42px 0 42px 0;
   background-color: $sand;
+  margin-top: 120px;
 
   .HeroText {
     font-size: 32px;
