--- a/src/components/JobCategories.module.scss
+++ b/src/components/JobCategories.module.scss
@@ -1,7 +1,7 @@
-@import '../App.scss';
+@import "../App.scss";
 
 .JobCategoriesContainer {
-  margin-top: 60px;
+  margin-top: 120px;
 
   .JobCategoriesIntro {
     display: flex;
