--- a/src/components/features/JobCategories.module.scss
+++ b/src/components/features/JobCategories.module.scss
@@ -1,8 +1,7 @@
-@import "../App.scss";
+@import "../../App.scss";
 
 .JobCategoriesContainer {
   margin-top: 120px;
-
   .JobCategoriesIntro {
     display: flex;
     flex-direction: column;
@@ -12,7 +11,6 @@
     max-width: 390px;
   }
 }
-
 .JobCategories {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
