--- a/src/components/features/login-section/AppSection.module.scss
+++ b/src/components/features/login-section/AppSection.module.scss
@@ -1,4 +1,4 @@
-@import "../App.scss";
+@import "../../../App.scss";
 
 .AppSectionContainer {
   margin: 120px 0 120px 0;
@@ -11,11 +11,11 @@
     width: 50%;
   }
 
-  .AppSectionInfo {}
+  .AppSectionInfo {
+  }
 
   .AppSectionImage {
     width: 100%;
     height: auto;
-
   }
 }
