--- a/src/components/features/SearchInput.module.scss
+++ b/src/components/features/SearchInput.module.scss
@@ -1,6 +1,6 @@
 @import "../../App.scss";
 
-.SearchInputContainer {
+.SearchFormContainer {
   padding: 8px;
   border: 1px solid $light-color;
   max-width: 482px;
@@ -19,13 +19,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
       i {
         color: #858585;
         font-size: 16px;
         margin-right: 8px;
       }
-
       .Input {
         border-color: $white !important;
         border-style: none;
@@ -48,13 +46,13 @@
           color: #999; /* Placeholder text color */
         }
       }
-      .Separator {
-        height: 32px;
-        background-color: #a2a1a1;
-        width: 1px;
-        margin-left: 8px;
-        margin-right: 20px;
-      }
+    }
+    .Separator {
+      height: 32px;
+      background-color: #bdbbbb;
+      width: 1px;
+      margin-left: 8px;
+      margin-right: 20px;
     }
   }
 }
